Fixing markdown for truncated column descriptions in the table

--- a/frontend/amundsen_application/static/js/features/ColumnList/styles.scss
+++ b/frontend/amundsen_application/static/js/features/ColumnList/styles.scss
@@ -80,11 +80,14 @@ $nested-column-row-color: $gray5;
     white-space: normal;
   }
 
-  .column-desc {
+  .column-desc p {
     @extend %text-body-w3;
 
     margin: 0;
     max-width: $description-max-width-small;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @media (min-width: $screen-md-max) {
       max-width: $description-max-width-med;
